--- a/raylib-game-template-main/projects/Virtual Ecology Project/raylib_game/raylib_game.vcxproj
+++ b/raylib-game-template-main/projects/Virtual Ecology Project/raylib_game/raylib_game.vcxproj
@@ -351,7 +351,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Agent.cpp" />
+    <ClCompile Include="ChaserAgent.cpp" />
+    <ClCompile Include="Food.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="WanderingAgent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
