game.cpp update

--- a/raylib-game-template-main/projects/Virtual Ecology Project/raylib_game/raylib_game.vcxproj
+++ b/raylib-game-template-main/projects/Virtual Ecology Project/raylib_game/raylib_game.vcxproj
@@ -351,6 +351,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Agent.cpp" />
+    <ClCompile Include="ChaserAgent.cpp" />
+    <ClCompile Include="Food.cpp" />
     <ClCompile Include="game.cpp" />
   </ItemGroup>
   <ItemGroup>
